k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-react
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-react
  template:
    metadata:
      labels:
        app: frontend-react
    spec:
      containers:
      - name: frontend-react
        image: acrformation.azurecr.io/frontend:latest
        imagePullPolicy: Always        # 👈 toujours prendre la dernière image
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-react-svc
  namespace: demo
spec:
  selector:
    app: frontend-react
  ports:
  - port: 80
    targetPort: 80
